--- a/application/template/pages/poster.html.twig
+++ b/application/template/pages/poster.html.twig
@@ -9,9 +9,9 @@
                   </center>
                   <form action="poster" method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
                         <div class="d-flex mx-auto flex-column col-sm-12 col-md-12 col-lg-12 mb-3 p-0">
-                                    <label for="titre">Titre</label>
-                                    <input type="text" name="titre" class="form-control" required>
-                              </div>
+                              <label for="titre">Titre</label>
+                              <input type="text" name="titre" class="form-control" required>
+                        </div>
                         <div class="form-row">
                               <div class="form-group col-sm-12 col-md-6 col-lg-6 ">
                                     <label for="Nom">Nom</label>
@@ -46,13 +46,13 @@
                               </div>
                               <div class="form-group col-sm-12 col-md-6 col-lg-6">
                                     <label for="example4">Quelle catégorie fait partie votre annonce.</label>
-                                    
-                                    <select class="form-control"  name="categorie" >
+
+                                    <select class="form-control" name="categorie">
                                           <option value="selected">Faites votre choix</option>
-                                          <option value ="2">Animalerie</option>
+                                          <option value="2">Animalerie</option>
                                           <option value="3">Emploi</option>
                                           <option value="4">Auto/Moto</option>
-                                         <option value="1">Loisirs</option>
+                                          <option value="1">Loisirs</option>
                                     </select>
                               </div>
 
@@ -72,15 +72,17 @@
                                     <textarea name="description" class="form-control rounded-0" id="desc" cols="30"
                                           rows="3" required></textarea>
                               </div>
+                              <div id="reCaptcha" class="form-group col-sm-12 col-md-12 col-lg-12 mt-3 d-flex justify-content-center g-recaptcha" data-sitekey="6Lem2coZAAAAANrcW6L41VKF1skSH7XmNiSdwgT-"></div>
+                              <br />
                               <div class="form-group col-sm-12 col-md-12 col-lg-12">
                                     <button type="submit" value="ajouter"
                                           class="btn bg-danger btn-primary btn-lg btn-block border-0">Envoyer</button>
                               </div>
-                              
+
                   </form>
             </div>
       </div>
-                                    
+
 </div>
 
 {% endblock add %}
