--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,13 @@
   flex-grow: 3;
 }
 
+.validation {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  min-height: 600px;
+}
+
 .search-bar select {
   border-radius: 0.25rem 0 0 0.25rem;
 }
