ajout de la confiramtion des annonces

--- a/application/template/pages/poster.html.twig
+++ b/application/template/pages/poster.html.twig
@@ -78,7 +78,7 @@
                                     <button type="submit" value="ajouter"
                                           class="btn bg-danger btn-primary btn-lg btn-block border-0">Envoyer</button>
                               </div>
-
+                        </div>
                   </form>
             </div>
       </div>
