--- a/application/template/pages/validation.html.twig
+++ b/application/template/pages/validation.html.twig
@@ -1,4 +1,6 @@
 {% extends "./base.html.twig" %}
+
+{% block reCaptcha %}<script src="https://www.google.com/recaptcha/api.js" async defer></script>{% endblock reCaptcha %}
 {% block title %}Validation du formulaire{% endblock title %}
 {% block add %}
 {{dump(idunique)}}
