--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,8 +28,18 @@
   font-size: 20px;
 }
 
+.display-5 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+#scroller-layout {
+  min-height: calc(100vh - 183.5px);
 }
 
 .scroller-item {
@@ -103,6 +113,14 @@
 
 .search-bar button {
   border-radius: 0 0.25rem 0.25rem 0;
+}
+
+.scrollup {
+  position: fixed;
+  right: 20px;
+  bottom: 80px;
+  /* left: 0; */
+  z-index: 1030;
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
