--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -24,11 +24,20 @@ $secondary-color: #b87508;
 .fs-20{
     font-size:20px; 
 }
+.display-5{
+    font-size: 2.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
 .cursor-pointer{
     cursor: pointer;
 }
+#scroller-layout{
+    min-height: Calc(100vh - 183.5px);
+}
 .scroller-item{
     transition: all 1s ease-in;
+    
 }
 .overflow-wrap-break{
     overflow-wrap: break-word;
@@ -88,6 +97,13 @@ $secondary-color: #b87508;
 }
 .search-bar button{
     border-radius: 0 0.25rem 0.25rem 0;
+}
+.scrollup{
+    position: fixed;
+    right: 20px;
+    bottom: 80px;
+    /* left: 0; */
+    z-index: 1030;
 }
 @media (min-width: 992px) and (max-width: 1200px){
     .scroller-item {
