Affichage des annonces

--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -55,7 +55,9 @@
                     <span class="d-flex mr-2">
                         <i class="material-icons">add_circle_outline</i>
                     </span>
+                    {% block boutonPoster %}
                     <span class="font-weight-bold">Poster une annonce</span>
+                    {% endblock boutonPoster %}
                 </a>
 
             </div>
