--- a/application/template/pages/ajouterAnnonce.html.twig
+++ b/application/template/pages/ajouterAnnonce.html.twig
@@ -1,38 +1,41 @@
  {% for annonce in listes_annonces %}
- <div
-   class="scroller-item d-flex justify-content-between text-dark border border-dark flex-xl-row flex-column-reverse bg-light p-2 mb-5 col-lg-5 col-sm-5 col-10"
-   id="{{annonce.ann_id}}">
-   <div class="annonce-text d-flex justify-content-between flex-column text-center text-xl-left">
-     <h2>{{annonce.ann_titre}}</h2>
-     <p class="text-danger ml-2 prix">{{annonce.ann_prix}} €</p>
-     <p class="ml-2 font-italic">{{annonce.cat_libelle}}</p>
-     <p class="ml-2 font-weight-bold">Le {{annonce.ann_date_ecriture|date('j m Y')}}</p>
-     <div class="d-flex justify-content-center btn-annonce">
-       <a href="annonce/{{annonce.ann_id}}" class="btn bg-danger text-light d-flex justify-content-center">
-         <i class="material-icons mr-2">pageview</i>
-         <span>Détails</span>
-       </a>
-       <a href="" class="btn bg-danger text-light d-flex justify-content-center ml-3">
-         <i class="material-icons mr-2">picture_as_pdf</i>
-         <span>Télécharger</span>
-       </a>
-       {# <a href="modifier.php?{{annonce.ann_id}}" class="btn bg-danger">Modifier</a>
+  <div
+    class="scroller-item d-flex justify-content-between text-dark border border-dark flex-xl-row flex-column-reverse bg-light p-2 mb-5 col-lg-5 col-sm-5 col-10"
+    id="{{annonce.ann_id}}">
+    <div class="annonce-text d-flex justify-content-between flex-column text-center text-xl-left">
+      <h2>{{annonce.ann_titre}}</h2>
+      <p class="text-danger ml-2 prix">{{annonce.ann_prix}} €</p>
+      <div>
+        <p class="ml-2 mb-0 font-italic">{{annonce.cat_libelle}}</p>
+        <p class="ml-2 font-weight-bold">Le {{annonce.ann_date_ecriture|date('j m Y')}}</p>
+      </div>
+      <div class="d-flex justify-content-center btn-annonce">
+        <a href="annonce/{{annonce.ann_id}}" class="btn bg-danger text-light d-flex justify-content-center">
+          <i class="material-icons mr-2">pageview</i>
+          <span>Détails</span>
+        </a>
+        <a href="telecharger/{{annonce.ann_id}}" target="_blank" class="btn bg-danger text-light d-flex justify-content-center ml-3">
+          <i class="material-icons mr-2">picture_as_pdf</i>
+          <span>Télécharger</span>
+        </a>
+        {# <a href="modifier.php?{{annonce.ann_id}}" class="btn bg-danger">Modifier</a>
           <a href="supprimer.php?{{annonce.ann_id}}" class="btn bg-danger">Supprimer</a> #}
-     </div>
-   </div>
-   {% if annonce.ann_image_url %}
-   {% set image = annonce.ann_image_url %}
-   {% else %}
-   {% set image = annonce.cat_libelle %}
-   {% endif %}
-   <div
-     class="d-flex align-items-center justify-content-xl-end justify-content-lg-center justify-content-md-end justify-content-center p-0 ml-2">
-     <img class="fit-picture mw-500 mh-500 img-fluid" src="../public/assets/medias/{{image}}"
-       alt="{{annonce.ann_image_nom}}">
-   </div>
+      </div>
+    </div>
+    {{dump(annonce)}}
+    {% if annonce.ann_image_url %}
+    {% set image = annonce.ann_image_url %}
+    {% else %}
+    {% set image = annonce.cat_libelle ~ '.jpg'  %}
+    {% endif %}
+    {{dump(image)}}
+    <div
+      class="d-flex align-items-center justify-content-xl-end justify-content-lg-center justify-content-md-end justify-content-center p-0 ml-2">
+      <img class="fit-picture mw-500 mh-500 img-fluid" src="../public/assets/media/{{image}}"
+        alt="{{annonce.ann_image_nom}}">
+    </div>
 
- </div>
-
+  </div>
 
  {% endfor %}
  <div class="ajax-loader text-center m-2 col-12">
