--- a/application/template/pages/ajouterAnnonce.html.twig
+++ b/application/template/pages/ajouterAnnonce.html.twig
@@ -22,13 +22,13 @@
           <a href="supprimer.php?{{annonce.ann_id}}" class="btn bg-danger">Supprimer</a> #}
       </div>
     </div>
-    {{dump(annonce)}}
+    {# {{dump(annonce)}} #}
     {% if annonce.ann_image_url %}
     {% set image = annonce.ann_image_url %}
     {% else %}
     {% set image = annonce.cat_libelle ~ '.jpg'  %}
     {% endif %}
-    {{dump(image)}}
+    {# {{dump(image)}} #}
     <div
       class="d-flex align-items-center justify-content-xl-end justify-content-lg-center justify-content-md-end justify-content-center p-0 ml-2">
       <img class="fit-picture mw-500 mh-500 img-fluid" src="../public/assets/media/{{image}}"
