Modification bouton scroll top et mise en forme de la page de détail d'annonce

--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -75,6 +75,7 @@
     <script src="../public/js/dragAndDrop.js"></script>
     <script src="../public/js/formValidation.js"></script>
     <script src="../public/js/reCaptcha.js"></script>
+    <script src="../public/js/BackToTop.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
