--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -45,7 +45,7 @@
     Fin des annonces
   </div>
 </div>
-<a class="scrollup btn bg-danger"><i class="material-icons text-light display-5 ">arrow_upward</i></a>
+<a class="scrollup btn bg-danger d-none" id="backToTop"><i class="material-icons text-light display-5 ">arrow_upward</i></a>
 {% endblock add %}
 {% block footer %}
 
