--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,14 @@
   font-size: 20px;
 }
 
+.fs-30 {
+  font-size: 30px;
+}
+
+.txt-underline {
+  text-decoration: underline;
+}
+
 .display-5 {
   font-size: 2.5rem;
   font-weight: 300;
@@ -48,6 +56,10 @@
 
 .minw-100 {
   min-width: 100%;
+}
+
+.lv {
+  border-left: 2px solid black;
 }
 
 .ajax-loader {
