--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -24,6 +24,12 @@ $secondary-color: #b87508;
 .fs-20{
     font-size:20px; 
 }
+.fs-30{
+    font-size: 30px;
+}
+.txt-underline{
+    text-decoration: underline;
+}
 .display-5{
     font-size: 2.5rem;
     font-weight: 300;
@@ -43,7 +49,9 @@ $secondary-color: #b87508;
     min-width: 100%;
 }
 
-
+.lv{
+    border-left: 2px solid black;
+}
 .ajax-loader {
     display: block;
     text-align: center;
