--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -60,7 +60,7 @@
     <span>Lama Shop</span>
   </div>
   <div class="">
-    <a href="https://github.com/fouad-git" class="text-danger" target="_blank">Fouad Lyafousi</a>
+    <a href="https://github.com/fouad-git" class="text-danger" target="_blank">Fouad LYOUSFI</a>
     <span class="fs-20"> • </span>
     <a href="https://github.com/fouad-git" class="text-danger" target="_blank">Adrien Schmidt</a>
   </div>
