--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -1,24 +1,25 @@
 {% extends "./base.html.twig" %}
-{% block title %}listes des annonces{% endblock title %}
+{% block title %}Accueil{% endblock title %}
 {% block add %}
-<div class="mt-5 px-4 flex-wrap d-flex justify-content-around" id="scroller-layout">
+
+<div class="container w-auto ml-3 mr-3 ml-sm-auto mr-sm-auto ml-sm-0 mt-5 px-0 flex-wrap d-flex justify-content-center border border-dark border-size-5 bg-dark" id="scroller-layout">
   {% for annonce in listes_annonces %}
   <div
-    class="scroller-item d-flex justify-content-between text-dark border border-dark flex-xl-row flex-column-reverse bg-light p-2 mb-5 col-lg-5 col-sm-5 col-10"
+    class="scroller-item d-flex justify-content-between text-dark border border-dark flex-column-reverse bg-light p-2 col-lg-4 col-sm-6 col-12 border-size-5"
     id="{{annonce.ann_id}}">
     <div class="annonce-text d-flex justify-content-between flex-column text-center text-xl-left">
-      <h2>{{annonce.ann_titre}}</h2>
+      <h2 class="text-center">{{annonce.ann_titre}}</h2>
       <p class="text-danger ml-2 prix">{{annonce.ann_prix}} €</p>
       <div>
         <p class="ml-2 mb-0 font-italic">{{annonce.cat_libelle}}</p>
         <p class="ml-2 font-weight-bold">Le {{annonce.ann_date_ecriture|date('j m Y')}}</p>
       </div>
-      <div class="d-flex justify-content-center btn-annonce">
-        <a href="annonce/{{annonce.ann_id}}" class="btn bg-danger text-light d-flex justify-content-center">
+      <div class="d-flex justify-content-center btn-annonce flex-sm-column flex-md-row">
+        <a href="annonce/{{annonce.ann_id}}" class="btn bg-danger text-light d-flex justify-content-center mb-sm-2 mb-md-0 mr-2 mr-sm-0">
           <i class="material-icons mr-2">pageview</i>
           <span>Détails</span>
         </a>
-        <a href="telecharger/{{annonce.ann_id}}" target="_blank" class="btn bg-danger text-light d-flex justify-content-center ml-3">
+        <a href="telecharger/{{annonce.ann_id}}" target="_blank" class="btn bg-danger text-light d-flex justify-content-center ml-md-3">
           <i class="material-icons mr-2">picture_as_pdf</i>
           <span>Télécharger</span>
         </a>
@@ -30,26 +31,29 @@
     {% set image = annonce.cat_libelle ~ '.jpg'  %}
     {% endif %} 
     <div
-      class="d-flex align-items-center justify-content-xl-end justify-content-lg-center justify-content-md-end justify-content-center p-0 ml-2">
-      <img class="fit-picture mw-500 mh-500 img-fluid" src="../public/assets/media/{{image}}"
+      class="d-flex align-items-center justify-content-xl-center justify-content-lg-center justify-content-md-end justify-content-center p-0 ">
+      <img class="w-100 fit-picture mw-500 mh-500 img-fluid" src="../public/assets/media/{{image}}"
         alt="{{annonce.ann_image_nom}}">
     </div>
 
   </div>
 
   {% endfor %}
-  <div id="first-loader" class="ajax-loader text-center col-12 mb-5" value={{Nbr_annonces}}>
-    <img src="https://media2.giphy.com/media/sSgvbe1m3n93G/giphy.gif">
+  <div id="first-loader" class="ajax-loader text-center col-12 m-3 d-none" value={{Nbr_annonces}}>
+    {# <img src="../public/assets/media/loader.gif"> #}
+    <div class="spinner-border text-light" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
   </div>
-  <div id="fin-annonce" class="fin-annnonce text-center d-none col-12 m-3 display-4 font-weight-bold">
+  <div id="fin-annonce" class="fin-annnonce text-center bg-light d-none col-12 display-4 font-weight-bold py-5 mt-5">
     Fin des annonces
   </div>
 </div>
-<a class="scrollup btn bg-danger"><i class="material-icons text-light display-5 ">arrow_upward</i></a>
+<a href="" class="d-none scrollup btn bg-danger"><i class="material-icons text-light display-5 ">arrow_upward</i></a>
 {% endblock add %}
 {% block footer %}
 
-<div class="bg-dark p-4 text-light d-flex justify-content-between">
+<div class="bg-dark p-4 text-light d-flex flex-column flex-sm-row justify-content-between text-center">
   <div>
     &copy;
     <script>
