Ajout d'un input hidden pour faire passer les donnée du formulaire dans le js qui gère l'infinite scroll

--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -1,7 +1,9 @@
 {% extends "./base.html.twig" %}
 {% block title %}Accueil{% endblock title %}
 {% block add %}
-
+{% for formItem in form %}
+<input class="formContent" id="form{{formItem}}" name="form" type="hidden" value={{formItem}}>
+{% endfor %}
 <div class="container bg-dark mt-3 py-3 text-white">
   <form action="" method="post" class="text-left">
     <label class="input-search m-0 fs-20 font-weight-bold text-left mb-2">Nom du produit :</label>
@@ -18,7 +20,8 @@
         {% for categorie in categories %}
         <li class="mx-2">
           <label class="label-checkbox">
-            <input class="input-checkbox" name="{{categorie.id}}" type="checkbox" id="Check{{categorie.id}}" value="{{categorie.id}}">
+            <input class="input-checkbox" name="{{categorie.id}}" type="checkbox" id="Check{{categorie.id}}"
+              value="{{categorie.id}}">
             <div class="button-checkbox d-flex align-items-center">
               <i class="material-icons align-middle add">add</i>
               <i class="material-icons align-middle done">done</i>
